# python-scciclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  coding.py  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
scciclient/: __init__.py
scciclient/irmc/: __init__.py  elcm.py  exceptions.py  ipmi.py  raid_config.json  raid_config_schema.json  sample_config.json  scci.py  snmp.py
scciclient/irmc/viom/: client.py  elcm.py
scciclient/tests/: test_scciclient.py
scciclient/tests/irmc/: test_elcm.py  test_ipmi.py  test_scci.py  test_snmp.py
scciclient/tests/irmc/fixtures/: irmc_report_ng.xml  irmc_report_ok.xml
scciclient/tests/irmc/viom/: test_client.py  test_elcm.py
