[metadata]
name = python-scciclient
summary = Python ServerView Common Command Interface (SCCI) Client Library
description-file =
    README.rst
author = Fujitsu OpenStack
author-email = openstack.fujitsu@gmail.com
home-page = https://github.com/fujitsu-openstack/python-scciclient
classifier =
    Development Status :: 1 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    scciclient

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = scciclient/locale
domain = python-scciclient

[update_catalog]
domain = python-scciclient
output_dir = scciclient/locale
input_file = scciclient/locale/python-scciclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = scciclient/locale/python-scciclient.pot
